--- a/Chess-UWP/Chess-UWP.csproj
+++ b/Chess-UWP/Chess-UWP.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Infrastructure\Converters\PositionToMarginConverter.cs" />
     <Compile Include="Infrastructure\Converters\UriToBitmapImageConverter.cs" />
     <Compile Include="Infrastructure\ICellsInitializer.cs" />
+    <Compile Include="Infrastructure\IGameProvider.cs" />
     <Compile Include="Infrastructure\Initializers\FiguresImagesInitializerDefault.cs" />
     <Compile Include="Infrastructure\Initializers\FiguresInitializer.cs" />
     <Compile Include="Infrastructure\GameProvider.cs" />
@@ -126,6 +127,7 @@
     <Compile Include="Models\Player.cs" />
     <Compile Include="Infrastructure\PointExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\ViewModelBase.cs" />
     <Compile Include="Views\BoardView.xaml.cs">
       <DependentUpon>BoardView.xaml</DependentUpon>
     </Compile>
@@ -143,7 +145,6 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
-    <None Include="Chess-UWP_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\Figures\icons8-bishop-100.png" />
@@ -194,6 +195,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Caliburn.Micro">
+      <Version>3.2.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.1.9</Version>
     </PackageReference>
