--- a/Chess-UWP/Chess-UWP.csproj
+++ b/Chess-UWP/Chess-UWP.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Controls\FigureView.xaml.cs">
       <DependentUpon>FigureView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Infrastructure\Converters\PositionPointToWorldCoordinatesConverter.cs" />
     <Compile Include="Infrastructure\Initializers\CellsInitializer.cs" />
     <Compile Include="Infrastructure\Converters\BoolToBorderThickness.cs" />
     <Compile Include="Infrastructure\Converters\ColorToSolidColorBrushConverter.cs" />
@@ -116,7 +117,6 @@
     <Compile Include="Models\Figures\Queen.cs" />
     <Compile Include="Models\GameStartSettings.cs" />
     <Compile Include="ViewModels\BoardViewModel.cs" />
-    <Compile Include="ViewModels\FigureControlViewModel.cs" />
     <Compile Include="ViewModels\FigureViewModel.cs" />
     <Compile Include="ViewModels\MainMenuViewModel.cs" />
     <Compile Include="Models\Board.cs" />
