--- a/Chess-UWP/Chess-UWP.csproj
+++ b/Chess-UWP/Chess-UWP.csproj
@@ -12,7 +12,7 @@
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.17134.0</TargetPlatformVersion>
-    <TargetPlatformMinVersion>10.0.15063.0</TargetPlatformMinVersion>
+    <TargetPlatformMinVersion>10.0.16299.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -98,6 +98,8 @@
     <Compile Include="Controls\FigureView.xaml.cs">
       <DependentUpon>FigureView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Database\ChessDbContext.cs" />
+    <Compile Include="Database\GameInfo.cs" />
     <Compile Include="Infrastructure\Converters\PositionPointToWorldCoordinatesConverter.cs" />
     <Compile Include="Infrastructure\Initializers\CellsInitializer.cs" />
     <Compile Include="Infrastructure\Converters\BoolToBorderThickness.cs" />
@@ -202,6 +204,15 @@
   <ItemGroup>
     <PackageReference Include="Caliburn.Micro">
       <Version>3.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="EntityFramework">
+      <Version>6.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Data.Sqlite">
+      <Version>2.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite">
+      <Version>2.2.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.1.9</Version>
