--- a/Chess-UWP/Chess-UWP.csproj
+++ b/Chess-UWP/Chess-UWP.csproj
@@ -106,6 +106,9 @@
     <Compile Include="Database\IRepository.cs" />
     <Compile Include="Database\Repository.cs" />
     <Compile Include="Infrastructure\Converters\PositionPointToWorldCoordinatesConverter.cs" />
+    <Compile Include="Infrastructure\GameProviderComponents\MotionHandler\IMotionHandler.cs" />
+    <Compile Include="Infrastructure\GameProviderComponents\MoveTimer\IMoveTimer.cs" />
+    <Compile Include="Infrastructure\GameProviderComponents\MoveTimer\MoveTimer.cs" />
     <Compile Include="Infrastructure\Initializers\CellsInitializer.cs" />
     <Compile Include="Infrastructure\Converters\BoolToBorderThickness.cs" />
     <Compile Include="Infrastructure\Converters\ColorToSolidColorBrushConverter.cs" />
