--- a/Chess-UWP/Chess-UWP.csproj
+++ b/Chess-UWP/Chess-UWP.csproj
@@ -106,9 +106,15 @@
     <Compile Include="Database\IRepository.cs" />
     <Compile Include="Database\Repository.cs" />
     <Compile Include="Infrastructure\Converters\PositionPointToWorldCoordinatesConverter.cs" />
-    <Compile Include="Infrastructure\GameProviderComponents\MotionHandler\IMotionHandler.cs" />
+    <Compile Include="Infrastructure\GameProviderComponents\GameTimer\GameTimer.cs" />
+    <Compile Include="Infrastructure\GameProviderComponents\GameTimer\IGameTimer.cs" />
+    <Compile Include="Infrastructure\GameProviderComponents\IMotionHandler.cs" />
+    <Compile Include="Infrastructure\GameProviderComponents\IGameStartAndOver.cs" />
+    <Compile Include="Infrastructure\GameProviderComponents\Logger\ILogger.cs" />
+    <Compile Include="Infrastructure\GameProviderComponents\Logger\Logger.cs" />
     <Compile Include="Infrastructure\GameProviderComponents\MoveTimer\IMoveTimer.cs" />
     <Compile Include="Infrastructure\GameProviderComponents\MoveTimer\MoveTimer.cs" />
+    <Compile Include="Infrastructure\GameProviderComponents\PlayersContainer\IPlayersContainer.cs" />
     <Compile Include="Infrastructure\Initializers\CellsInitializer.cs" />
     <Compile Include="Infrastructure\Converters\BoolToBorderThickness.cs" />
     <Compile Include="Infrastructure\Converters\ColorToSolidColorBrushConverter.cs" />
