--- a/Chess-UWP/Chess-UWP.csproj
+++ b/Chess-UWP/Chess-UWP.csproj
@@ -108,12 +108,15 @@
     <Compile Include="Infrastructure\Converters\PositionPointToWorldCoordinatesConverter.cs" />
     <Compile Include="Infrastructure\GameProviderComponents\GameTimer\GameTimer.cs" />
     <Compile Include="Infrastructure\GameProviderComponents\GameTimer\IGameTimer.cs" />
+    <Compile Include="Infrastructure\GameProviderComponents\IFiguresHandler.cs" />
     <Compile Include="Infrastructure\GameProviderComponents\IMotionHandler.cs" />
     <Compile Include="Infrastructure\GameProviderComponents\IGameStartAndOver.cs" />
     <Compile Include="Infrastructure\GameProviderComponents\Logger\ILogger.cs" />
     <Compile Include="Infrastructure\GameProviderComponents\Logger\Logger.cs" />
     <Compile Include="Infrastructure\GameProviderComponents\MoveTimer\IMoveTimer.cs" />
     <Compile Include="Infrastructure\GameProviderComponents\MoveTimer\MoveTimer.cs" />
+    <Compile Include="Infrastructure\GameProviderComponents\PawnPromoter\IPawnPromoter.cs" />
+    <Compile Include="Infrastructure\GameProviderComponents\PawnPromoter\PawnPromoter.cs" />
     <Compile Include="Infrastructure\GameProviderComponents\PlayersContainer\IPlayersContainer.cs" />
     <Compile Include="Infrastructure\Initializers\CellsInitializer.cs" />
     <Compile Include="Infrastructure\Converters\BoolToBorderThickness.cs" />
